--- a/app/src/main/res/layout/use_list_item.xml
+++ b/app/src/main/res/layout/use_list_item.xml
@@ -20,13 +20,13 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="18dp"
+            android:layout_height="wrap_content"
             android:gravity="left|center_horizontal|center_vertical">
 
             <TextView
                 android:id="@+id/use_column1"
                 android:layout_width="56dp"
-                android:layout_height="18dp"
+                android:layout_height="20dp"
                 android:gravity="left|center_horizontal|center_vertical"
                 android:text="예약 건"
                 android:textColor="#ff4d4d"
@@ -36,20 +36,20 @@
         <!-- 예약 시간 -->
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="16dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:gravity="left|center_horizontal|center_vertical"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="16dp"
+                android:layout_height="wrap_content"
                 android:gravity="left|center_horizontal|center_vertical">
 
                 <TextView
                     android:id="@+id/use_column2"
                     android:layout_width="56dp"
-                    android:layout_height="16dp"
+                    android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="예약 시간"
                     android:textColor="#3e3e3e"
@@ -58,14 +58,14 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="16dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:gravity="left|center_horizontal|center_vertical">
 
                 <TextView
                     android:id="@+id/use_column3"
                     android:layout_width="match_parent"
-                    android:layout_height="16dp"
+                    android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="12/22 14:00"
                     android:textColor="#3e3e3e"
@@ -76,20 +76,20 @@
         <!-- 세차장소 -->
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="16dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:gravity="left|center_horizontal|center_vertical"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="16dp"
+                android:layout_height="wrap_content"
                 android:gravity="left|center_horizontal|center_vertical">
 
                 <TextView
                     android:id="@+id/use_column4"
                     android:layout_width="56dp"
-                    android:layout_height="16dp"
+                    android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="세차 장소"
                     android:textColor="#3e3e3e"
@@ -98,14 +98,14 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="16dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:gravity="left|center_horizontal|center_vertical">
 
                 <TextView
                     android:id="@+id/use_column5"
                     android:layout_width="match_parent"
-                    android:layout_height="16dp"
+                    android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="송파구 석촌호수로 274 (실내)"
                     android:textColor="#3e3e3e"
@@ -116,20 +116,20 @@
         <!-- 대리점 -->
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="16dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:gravity="left|center_horizontal|center_vertical"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="16dp"
+                android:layout_height="wrap_content"
                 android:gravity="left|center_horizontal|center_vertical">
 
                 <TextView
                     android:id="@+id/use_column6"
                     android:layout_width="56dp"
-                    android:layout_height="16dp"
+                    android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="대리점"
                     android:textColor="#3e3e3e"
@@ -138,14 +138,14 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="16dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="20dp"
                 android:gravity="left|center_horizontal|center_vertical">
 
                 <TextView
                     android:id="@+id/use_column7"
                     android:layout_width="match_parent"
-                    android:layout_height="16dp"
+                    android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="관악 1호점 (김태현) "
                     android:textColor="#3e3e3e"
@@ -154,14 +154,14 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="16dp"
+                android:layout_height="wrap_content"
                 android:layout_marginLeft="11dp"
                 android:gravity="right|center_horizontal|center_vertical">
 
                 <TextView
                     android:id="@+id/use_column8"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
+                    android:layout_height="18dp"
                     android:gravity="center|center_horizontal|center_vertical"
                     android:text="전화걸기"
                     android:textColor="#007aff"
@@ -172,26 +172,26 @@
         <!-- 이용 요금 -->
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="16dp"
+            android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
             android:gravity="left|center_horizontal|center_vertical"
             android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="16dp"
+                android:layout_height="wrap_content"
                 android:gravity="left|center_horizontal|center_vertical">
 
                 <TextView
                     android:id="@+id/use_column9"
                     android:layout_width="56dp"
-                    android:layout_height="16dp"
+                    android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="이용 요금"
                     android:textColor="#3e3e3e"
                     android:textSize="14sp" />
             </LinearLayout>
-
+<!--
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="16dp"
@@ -207,6 +207,23 @@
                     android:textColor="#3e3e3e"
                     android:textSize="14sp" />
             </LinearLayout>
+-->
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="20dp"
+                android:gravity="left|center_horizontal|center_vertical">
+
+                <TextView
+                    android:id="@+id/use_column10"
+                    android:layout_width="match_parent"
+                    android:layout_height="18dp"
+                    android:gravity="left|center_horizontal|center_vertical"
+                    android:text="43,000원"
+                    android:textColor="#3e3e3e"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
         </LinearLayout>
 
     </LinearLayout>
