--- a/app/src/main/res/layout/activity_reservation_main.xml
+++ b/app/src/main/res/layout/activity_reservation_main.xml
@@ -270,8 +270,10 @@
                     android:letterSpacing="0.05"
                     android:lineSpacingExtra="2sp"
                     android:button="@drawable/radio_button_selector"
+                    android:paddingStart="8dp"
                     android:text="@string/wash_indoor" />
 
+                <!--android:button="@drawable/radio_button_selector"-->
                 <RadioButton
                     android:id="@+id/radioButton2"
                     android:layout_width="match_parent"
@@ -282,6 +284,7 @@
                     android:letterSpacing="0.05"
                     android:lineSpacingExtra="2sp"
                     android:button="@drawable/radio_button_selector"
+                    android:paddingStart="8dp"
                     android:text="@string/wash_outdoor" />
             </RadioGroup>
 
