--- a/app/src/main/res/layout/use_list_item.xml
+++ b/app/src/main/res/layout/use_list_item.xml
@@ -25,7 +25,7 @@
 
             <TextView
                 android:id="@+id/use_column1"
-                android:layout_width="56dp"
+                android:layout_width="match_parent"
                 android:layout_height="20dp"
                 android:gravity="left|center_horizontal|center_vertical"
                 android:text="예약 건"
