--- a/app/src/main/res/layout/list_item_agent.xml
+++ b/app/src/main/res/layout/list_item_agent.xml
@@ -81,12 +81,10 @@
             android:textSize="14sp"
             android:textColor="#3e3e3e"
             android:text="@string/wash_area_dummy"
-            android:letterSpacing="0.05"
             tools:text="관악구, 서초구, 송파구,강동구"
             app:layout_constraintStart_toEndOf="@+id/wash_area_title"
             app:layout_constraintTop_toBottomOf="@+id/agentPhotoLayout"
-            app:layout_constraintEnd_toEndOf="parent"
-            />
+            app:layout_constraintEnd_toEndOf="parent" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/reservationTimeList"
