--- a/app/src/main/res/layout/activity_use_delete_settle.xml
+++ b/app/src/main/res/layout/activity_use_delete_settle.xml
@@ -10,12 +10,12 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:id="@+id/use_detail_include"
+        android:id="@+id/use_delete_settle_include"
         tools:ignore="MissingConstraints">
 
         <!-- ActionBar : Back / Title / Info -->
         <ImageView
-            android:id="@+id/use_detail_btnPrev"
+            android:id="@+id/use_delete_settle_btnPrev"
             android:layout_width="24dp"
             android:layout_height="24dp"
             android:layout_marginStart="32dp"
@@ -26,7 +26,6 @@
             app:srcCompat="@drawable/arrow_red_24_px" />
 
         <TextView
-            android:id="@+id/myinfo_title_activity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center|center_horizontal"
@@ -35,7 +34,7 @@
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/use_detail_btnPrev"
+            app:layout_constraintStart_toStartOf="@+id/use_delete_settle_btnPrev"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
@@ -43,7 +42,6 @@
 
     <!-- 내용 -->
     <LinearLayout
-        android:id="@+id/use_detail_layout_1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/default_background_type_2"
@@ -51,11 +49,10 @@
         android:layout_marginTop="16dp"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        app:layout_constraintTop_toBottomOf="@id/use_detail_include"
+        app:layout_constraintTop_toBottomOf="@id/use_delete_settle_include"
         tools:layout_editor_absoluteX="0dp">
 
         <LinearLayout
-            android:id="@+id/reserve_cancel_area"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:background="@drawable/default_background_type_6"
@@ -64,20 +61,19 @@
             android:shadowRadius="7"
             android:shadowColor="#C4C4C4"
             android:gravity="center|center_horizontal|center_vertical"
-            android:orientation="vertical"
-            android:visibility="gone">
+            android:orientation="vertical">
 
             <TextView
-            android:layout_width="match_parent"
-            android:layout_height="16dp"
-            android:layout_gravity="center"
-            android:gravity="center|center_horizontal|center_vertical"
-            android:text="취소가 완료되었습니다."
-            android:textColor="#ef3835"
-            android:textSize="14sp"/>
+                android:layout_width="match_parent"
+                android:layout_height="16dp"
+                android:layout_gravity="center"
+                android:gravity="center|center_horizontal|center_vertical"
+                android:text="취소가 완료되었습니다."
+                android:textColor="#ef3835"
+                android:textSize="14sp"/>
 
             <TextView
-                android:id="@+id/reserve_cancel_time"
+                android:id="@+id/settle_reserve_cancel_time"
                 android:layout_width="match_parent"
                 android:layout_height="14dp"
                 android:layout_marginTop="6dp"
@@ -153,7 +149,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/use_common_pay"
+                    android:id="@+id/settle_common_pay"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:gravity="right"
@@ -198,7 +194,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/use_coupone_pay"
+                    android:id="@+id/settle_coupone_pay"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:gravity="right"
@@ -232,7 +228,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/use_approve_info"
+                    android:id="@+id/settle_approve_info"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:layout_gravity="left|center_horizontal|center_vertical"
@@ -250,7 +246,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/use_use_pay"
+                    android:id="@+id/settle_use_pay"
                     android:layout_width="match_parent"
                     android:layout_height="18dp"
                     android:gravity="right"
@@ -284,7 +280,6 @@
                 android:gravity="left|center_horizontal|center_vertical">
 
                 <TextView
-                    android:id="@+id/use_column1"
                     android:layout_width="56dp"
                     android:layout_height="18dp"
                     android:gravity="left|center_horizontal|center_vertical"
@@ -307,7 +302,6 @@
                     android:gravity="left|center_horizontal|center_vertical">
 
                     <TextView
-                        android:id="@+id/use_column2"
                         android:layout_width="56dp"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
@@ -323,7 +317,7 @@
                     android:gravity="left|center_horizontal|center_vertical">
 
                     <TextView
-                        android:id="@+id/use_reserve_time"
+                        android:id="@+id/settle_reserve_time"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
@@ -347,7 +341,6 @@
                     android:gravity="left|center_horizontal|center_vertical">
 
                     <TextView
-                        android:id="@+id/use_column4"
                         android:layout_width="56dp"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
@@ -363,7 +356,7 @@
                     android:gravity="left|center_horizontal|center_vertical">
 
                     <TextView
-                        android:id="@+id/use_wash_address"
+                        android:id="@+id/settle_wash_address"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
@@ -387,7 +380,6 @@
                     android:gravity="left|center_horizontal|center_vertical">
 
                     <TextView
-                        android:id="@+id/use_column6"
                         android:layout_width="56dp"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
@@ -403,7 +395,7 @@
                     android:gravity="left|center_horizontal|center_vertical">
 
                     <TextView
-                        android:id="@+id/use_wash_agent"
+                        android:id="@+id/settle_wash_agent"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
@@ -412,22 +404,6 @@
                         android:textSize="14sp" />
                 </LinearLayout>
 
-                <LinearLayout
-                    android:id="@+id/use_agent_mobile"
-                    android:layout_width="match_parent"
-                    android:layout_height="18dp"
-                    android:layout_marginLeft="11dp"
-                    android:gravity="center|center_horizontal|center_vertical">
-
-                    <TextView
-                        android:id="@+id/use_use_column8"
-                        android:layout_width="match_parent"
-                        android:layout_height="18dp"
-                        android:gravity="center|center_horizontal|center_vertical"
-                        android:text="전화걸기"
-                        android:textColor="#007aff"
-                        android:textSize="14sp" />
-                </LinearLayout>
             </LinearLayout>
 
             <!-- 이용 요금 -->
@@ -444,7 +420,6 @@
                     android:gravity="left|center_horizontal|center_vertical">
 
                     <TextView
-                        android:id="@+id/use_column9"
                         android:layout_width="56dp"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
@@ -460,7 +435,7 @@
                     android:gravity="left|center_horizontal|center_vertical">
 
                     <TextView
-                        android:id="@+id/use_car_info"
+                        android:id="@+id/settle_car_info"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
@@ -482,7 +457,7 @@
                     android:gravity="left|center_horizontal|center_vertical">
 
                     <TextView
-                        android:id="@+id/use_car_number"
+                        android:id="@+id/settle_car_number"
                         android:layout_width="match_parent"
                         android:layout_height="18dp"
                         android:gravity="left|center_horizontal|center_vertical"
@@ -495,28 +470,6 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:id="@+id/reserve_cancel_layout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginTop="108dp"
-            android:gravity="center|center_horizontal|center_vertical">
-
-            <Button
-                android:id="@+id/reserve_cancel_btn"
-                android:layout_width="match_parent"
-                android:layout_height="52dp"
-                android:layout_gravity="center"
-                android:background="@drawable/default_button_7dp"
-                android:gravity="center|center_horizontal|center_vertical"
-                android:shadowColor="#C4C4C4"
-                android:shadowDx="0"
-                android:shadowDy="0"
-                android:shadowRadius="7"
-                android:text="@string/btn_reserve_cancel"
-                android:textColor="#FFFFFF"
-                android:textSize="15sp" />
-        </LinearLayout>
 
     </LinearLayout>
 
