--- a/app/src/main/res/layout/activity_notice.xml
+++ b/app/src/main/res/layout/activity_notice.xml
@@ -16,14 +16,14 @@
         <!-- ActionBar : Back / Title / Info -->
         <ImageView
             android:id="@+id/notice_btnPrev"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
             android:layout_marginStart="32dp"
             android:contentDescription="@string/actionbar_prev_icon_description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/arrow_red_24_px" />
+            android:src="@drawable/prev_image_selector" />
 
         <TextView
             android:id="@+id/myinfo_title_activity"
