--- a/app/src/main/res/layout/activity_myinfo_detail.xml
+++ b/app/src/main/res/layout/activity_myinfo_detail.xml
@@ -15,15 +15,15 @@
 
         <!-- ActionBar : Back / Title / Info -->
         <ImageView
-            android:id="@+id/myinfo_btnPrev"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:id="@+id/myinfo_profile_btnPrev"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
             android:layout_marginStart="32dp"
             android:contentDescription="@string/actionbar_prev_icon_description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/arrow_red_24_px" />
+            android:src="@drawable/prev_image_selector" />
 
         <TextView
             android:id="@+id/myinfo_title_activity"
@@ -35,7 +35,7 @@
             android:textSize="16sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="@+id/myinfo_btnPrev"
+            app:layout_constraintStart_toStartOf="@+id/myinfo_profile_btnPrev"
             app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
