--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -16,14 +16,14 @@
         <!-- ActionBar : Back / Title / Info -->
         <ImageView
             android:id="@+id/setting_btnPrev"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="16dp"
+            android:layout_height="16dp"
             android:layout_marginStart="32dp"
             android:contentDescription="@string/actionbar_prev_icon_description"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/arrow_red_24_px" />
+            android:src="@drawable/prev_image_selector" />
 
         <TextView
             android:id="@+id/myinfo_title_activity"
@@ -44,6 +44,7 @@
         android:id="@+id/settings_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="72dp"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="0dp">
         <LinearLayout
@@ -51,7 +52,6 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_marginStart="32dp"
-            android:layout_marginTop="72dp"
             android:layout_marginEnd="28dp"
             android:orientation="vertical"
             app:layout_constraintTop_toBottomOf="@id/setting_include"
