--- a/app/src/main/res/layout/activity_car_manage.xml
+++ b/app/src/main/res/layout/activity_car_manage.xml
@@ -70,7 +70,7 @@
         android:gravity="center|center_horizontal|center_vertical">
 
         <Button
-            android:id="@+id/car_reg_btn"
+            android:id="@+id/car_manage_reg_btn"
             android:layout_width="312dp"
             android:layout_height="52dp"
             android:layout_gravity="bottom|center"
