--- a/app/src/main/res/layout/activity_reservation_main.xml
+++ b/app/src/main/res/layout/activity_reservation_main.xml
@@ -223,7 +223,8 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
         android:layout_marginEnd="32dp"
-        app:layout_constraintTop_toBottomOf="@+id/car_info_layout">
+        app:layout_constraintTop_toBottomOf="@+id/car_info_layout"
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/wash_info_title"
@@ -323,7 +324,32 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/option_service_title" />
+            app:layout_constraintTop_toBottomOf="@+id/option_service_title"
+            android:visibility="visible"/>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="bottom|center_horizontal|center_vertical"
+            app:layout_constraintTop_toBottomOf="@+id/optionServiceList"
+            tools:layout_editor_absoluteX="16dp">
+
+            <Button
+                android:id="@+id/reserve_btn"
+                android:layout_width="match_parent"
+                android:layout_height="52dp"
+                android:background="@drawable/default_button_7dp"
+                android:shadowColor="#C4C4C4"
+                android:shadowDx="0"
+                android:shadowDy="0"
+                android:shadowRadius="7"
+                android:text="결재하기"
+                android:textColor="#FFFFFF"
+                android:textSize="15sp"
+
+                tools:ignore="MissingConstraints"
+                tools:layout_editor_absoluteX="-32dp" />
+        </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
