--- a/app/src/main/res/layout/list_item_search_address.xml
+++ b/app/src/main/res/layout/list_item_search_address.xml
@@ -10,6 +10,7 @@
     android:orientation="horizontal">
 
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/btnAddressLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -33,7 +34,7 @@
         <TextView
             android:id="@+id/address_title"
             android:layout_width="0dp"
-            android:layout_height="16dp"
+            android:layout_height="18dp"
             android:layout_marginTop="12dp"
             android:layout_marginStart="12dp"
             android:text="@string/address_search_dummy1"
@@ -47,7 +48,7 @@
         <TextView
             android:id="@+id/address_desc"
             android:layout_width="0dp"
-            android:layout_height="14dp"
+            android:layout_height="16dp"
             android:layout_marginStart="12dp"
             android:layout_marginBottom="12dp"
             android:text="@string/address_search_dummy2"
