--- a/app/src/main/res/layout/activity_use_detail.xml
+++ b/app/src/main/res/layout/activity_use_detail.xml
@@ -280,13 +280,13 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="18dp"
+                android:layout_height="22dp"
                 android:gravity="left|center_horizontal|center_vertical">
 
                 <TextView
                     android:id="@+id/use_column1"
-                    android:layout_width="56dp"
-                    android:layout_height="18dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="22dp"
                     android:gravity="left|center_horizontal|center_vertical"
                     android:text="예약 정보"
                     android:textColor="#ff4d4d"
