--- a/app/src/main/res/layout/splash_layout.xml
+++ b/app/src/main/res/layout/splash_layout.xml
@@ -7,22 +7,22 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="549dp"
-        android:gravity="center_horizontal"
+        android:layout_height="match_parent"
+        android:gravity="center|center_horizontal"
         android:orientation="vertical">
 
         <LinearLayout
-            android:layout_width="92dp"
-            android:layout_height="98dp"
-            android:layout_marginTop="272dp"
-            android:gravity="center"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:gravity="center|center_horizontal|center_vertical"
             android:orientation="vertical">
 
             <ImageView
                 android:id="@+id/splash_logo"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:src="@drawable/logo" />
+                android:src="@drawable/group_2" />
 
         </LinearLayout>
 
@@ -48,7 +48,7 @@
             android:textSize="7.5dp" />
 
     </LinearLayout>
-
+<!--
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -65,6 +65,6 @@
             android:textSize="7.5dp" />
 
     </LinearLayout>
-
+-->
 
 </LinearLayout>
