--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -148,6 +148,22 @@
                 app:layout_constraintTop_toBottomOf="@+id/btnMainMenu2" />
 
             <!-- 배너 -->
+            <ss.com.bannerslider.Slider
+                android:id="@+id/banner_slider"
+                android:layout_width="0dp"
+                android:layout_height="120dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="24dp"
+                android:layout_marginEnd="24dp"
+                app:slider_interval="5000"
+                app:slider_loopSlides="true"
+                app:slider_defaultBanner="1"
+                app:slider_indicatorSize="5dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/btnMainMenu3" />
+
+<!--
             <Button
                 android:id="@+id/mainBanner"
                 android:layout_width="0dp"
@@ -155,9 +171,11 @@
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
                 android:layout_marginEnd="24dp"
+                android:radius="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/btnMainMenu3" />
+-->
 
             <!-- 차량 등록 -->
             <androidx.constraintlayout.widget.ConstraintLayout
@@ -170,7 +188,7 @@
                 android:background="@drawable/layout_background"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/mainBanner">
+                app:layout_constraintTop_toBottomOf="@+id/banner_slider">
 
                 <TextView
                     android:id="@+id/registerTitle"
