- 주소연동, 쿠폰 연동

--- a/app/src/main/res/layout/list_item_option_service.xml
+++ b/app/src/main/res/layout/list_item_option_service.xml
@@ -15,43 +15,59 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="match_parent"
+            android:gravity="center|center_horizontal|center_vertical">
 
             <CheckBox
                 android:id="@+id/checkBoxOption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="32dp"
                 android:background="@drawable/checkbox_selector"
                 android:button="@null"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
+                android:gravity="center|center_horizontal|center_vertical"
+                android:layout_gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
-                />
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
 
             <TextView
                 android:id="@+id/option_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="13dp"
-                android:textSize="15sp"
                 android:textColor="#3e3e3e"
-                tools:text="가니쉬 코팅"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/checkBoxOption"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"
-                />
+                app:layout_constraintVertical_bias="0.55"
+                tools:text="가니쉬 코팅" />
 
             <ImageView
                 android:id="@+id/btnOptionInfo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="172dp"
                 android:contentDescription="@string/option_info_desc"
-                app:srcCompat="@drawable/option_info_icon"
-                app:layout_constraintTop_toTopOf="parent"
+                android:gravity="center"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                />
+                app:layout_constraintStart_toStartOf="@+id/option_name"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/option_info_icon" />
+
+            <TextView
+                android:id="@+id/option_pay"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="68dp"
+                android:textColor="#3e3e3e"
+                android:textSize="15sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/btnOptionInfo"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.55"
+                tools:text="6,000" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
