--- a/app/src/main/res/layout/coupone_list_item.xml
+++ b/app/src/main/res/layout/coupone_list_item.xml
@@ -7,6 +7,7 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/coupone_layout"
         android:layout_width="match_parent"
         android:layout_height="72dp"
         android:gravity="center_vertical"
