--- a/app/src/main/res/layout/list_item_option_service.xml
+++ b/app/src/main/res/layout/list_item_option_service.xml
@@ -22,7 +22,6 @@
                 android:id="@+id/checkBoxOption"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="32dp"
                 android:background="@drawable/checkbox_selector"
                 android:button="@null"
                 android:gravity="center|center_horizontal|center_vertical"
@@ -64,9 +63,8 @@
                 android:textColor="#3e3e3e"
                 android:textSize="15sp"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@+id/btnOptionInfo"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.55"
                 tools:text="6,000" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
